--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,8 +1,9 @@
 .footer {
-  height: 250px;
+  height: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #edf3f6;
+  background-color: #1f1f1f;
+  color: white;
 }
