--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,13 +1,15 @@
 .navbar {
   display: flex;
-  box-shadow: rgba(0, 0, 0, .15) 0px -2px 10px 0px;
+  box-shadow: rgba(0, 0, 0, 0.24) 10px 10px 10px 1px;
   justify-content: space-between;
   align-items: center;
   padding: .5em 2em;
+  background-color: #1f1f1f;
 }
 
 .brand {
   font-size: 1.2em;
+  color: white;
 }
 
 .brand span {
@@ -16,15 +18,33 @@
 }
 
 .links_list {
+  height: 100%;
   display: flex;
   list-style: none;
 }
 
 .links_list li a {
+  color: white;
   padding: .4em .6em;
 }
 
-.active {
-  background-color: #000;
+.links_list li button {
+  text-decoration: none;
+  background-color: transparent;
+  border: none;
   color: white;
+  transition: .4s;
+  font-size: 1em;
+  cursor: pointer;
+  font-family: "Montserrat", sans-serif;
+}
+
+.links_list li a:hover,
+.links_list li button:hover {
+  color: #aaa;
+}
+
+.active {
+  transition: .5s;
+  border-bottom: 1px solid white;
 }
